fix scrollbar issues on mobile due to block-grid not being aligned to grid

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -8,13 +8,4 @@
 
 html {
   -webkit-font-smoothing: antialiased;
-  // overflow-x: hidden;
-}
-
-body {
-  overflow-x: hidden;
-}
-
-*{
-  -webkit-overflow-scrolling: touch;
 }
